add class slider from sliders(present only dotSlider logic)

--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -269,6 +269,7 @@ header {
     .box(100%, 0, 100%);
     .flex__box(row, center);
     position: relative;
+    left: 0;
 }
 
 .header__slider__item__wrapper {
