rework styles - more adaptive menu

--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -337,8 +337,9 @@ header {
 
 .header__menu {
     .box(100%);
-    .flex__box(row, center, space-between);
+    .flex__box(row, center, flex-end);
     list-style: none;
+    gap: 1.5vw;
 }
 
 .header__menu__item {
