fix positionNum from class Slider

--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -356,3 +356,11 @@ header {
     position: relative;
     z-index: 2;
 }
+
+.numeric__title{
+    .text(150%, 600, #FFF);
+    position: relative;
+    top: 50%;
+    left: 50%;
+    z-index: 3;
+}
