--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -136,6 +136,12 @@ h2 {
     .text(160%, 800, @color1);
 }
 
+.h1__other__pages{
+    .text(150%, 800, @color1);
+    text-align: center;
+    width: 100%;
+}
+
 /*МИКСИНЫ*/
 
 /*keyframes*/
@@ -418,14 +424,17 @@ header {
     display: none;
 }
 
-.services__items__box .services__item:nth-child(-n+3) {
+.services__items__box .services__item:nth-child(-n+3), .archive__services__item {
     .flex__box(column);
     width: calc(100% / 3);
     box-sizing: border-box;
     gap: 1vw;
+    flex-grow: 0;
+    flex-shrink: 1;
+    flex-basis: auto;
 }
 
-.services__item__wrapper__img {
+.services__item__wrapper__img, .archive__services__item__wrapper__img {
     .img_box(100%, 35vh);
     
     & img {
@@ -433,11 +442,19 @@ header {
     }
 }
 
-.services__item__title {
+.services__item__title, .archive__services__item__title {
     .text(130%, 800, @color1);
+    flex-grow: 0;
+    flex-shrink: 1;
+    flex-basis: auto;
+    transition: .4s;
+
+    &:hover{
+        color: @color2;
+    }
 }
 
-.services__item__description {
+.services__item__description, .archive__services__item__description {
     .text(90%, 600, @fontColor);
 }
 
@@ -469,3 +486,17 @@ header {
     padding-top: 0.2vw;
     opacity: 0;
 }
+
+.archive__services__block{
+    .box(100%, 2.5%);
+    .flex__box(row, flex-start);
+    padding: 3vw 2.5%;
+    flex-wrap: wrap;
+    gap: 1.5vw 1.5%;
+    background-color: #FFF;
+}
+
+.archive__services__item{
+    .box(31.5%);
+}
+
