added brands__block from front-page

--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -787,3 +787,24 @@ footer {
 }
 
 /*============================= THX ============================*/
+
+
+/*============================= BRANDS__BLOCK ============================*/
+
+.brends__block{
+    .box(100%, 2.5%);
+    .flex__box(row, center, space-between);
+    padding: 3vw 2.5%;
+}
+
+.brend__item__wrapper{
+    .img_box(15%);
+    filter: grayscale(100%);
+    transition: 0.5s;
+
+    &:hover{
+        filter: grayscale(0%);
+    }
+}
+
+/*============================= BRANDS__BLOCK ============================*/
