--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -808,3 +808,35 @@ footer {
 }
 
 /*============================= BRANDS__BLOCK ============================*/
+
+/*============================= ADVANTAGES__BLOCK ============================*/
+
+.advantages__block{
+    .box(100%, 2.5%);
+    .flex__box(row, center);
+    flex-wrap: wrap;
+    gap: 0.3vw;
+    padding: 4vw 2.5%;
+}
+
+.advantages__item{
+    .box(32%, 3%);
+    .flex__box(column);
+    gap: 1vw;
+    padding: 2vw 3%;
+    background-color: #FFF;
+}
+
+.advantages__wrapper__img{
+    .img_box(5vw);
+}
+
+.advantages__title{
+    .text(115%, 800, @color1);  
+}
+
+.advantages__description{
+    .text(100%, 400, @fontColor);
+}
+
+/*============================= ADVANTAGES__BLOCK ============================*/
