--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -569,7 +569,7 @@ footer {
     .box(100%, 2.5%);
     .flex__box(row, unset, space-between);
     padding: 4vw 2.5%;
-    min-height: 30vw;
+    margin-top: 3vw;
 }
 
 .footer__mask__img {
@@ -837,6 +837,32 @@ footer {
 
 .advantages__description{
     .text(100%, 400, @fontColor);
+}
+
+/*============================= ADVANTAGES__BLOCK ============================*/
+
+/*============================= ADVANTAGES__BLOCK ============================*/
+
+.our__clients__block{
+    .box(100%);
+    .flex__box(row, stretch);
+    margin-top: 3vw;
+}
+
+.our__clients__content{
+    .box(50%, 2.5%);
+    .flex__box(column, flex-start, center);
+    
+    background-color: #FFF;
+    gap: 2vw;
+}
+
+.our__clients__description{
+    .text(100%, 600, @fontColor);
+}
+
+.our__clients__wrapper__img{
+    .img_box(50%);
 }
 
 /*============================= ADVANTAGES__BLOCK ============================*/
