--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -878,7 +878,7 @@ footer {
     .box(100%);
     margin-top: 3vw;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(16vw, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(20vw, 1fr));
     grid-gap: 1vw 1vw;
     padding-bottom: 3vw;
   }
@@ -892,14 +892,14 @@ footer {
     transition: .3s;
   
     &:hover{
-      transform: scale(1.1, 1.3);
+      transform: scale(1.1, 1.1);
       z-index: 2;
     }
   
     & img{
       width: 100%;
       min-height: 17vw;
-      object-fit: contain; 
+      object-fit: cover; 
     }
   }
   
