added archive-page from photo__gallery

--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -136,10 +136,11 @@ h2 {
     .text(160%, 800, @color1);
 }
 
-.h1__other__pages {
+.h1__archive__pages {
     .text(150%, 800, @color1);
     text-align: center;
     width: 100%;
+    margin-top: 2vw;
 }
 
 /*МИКСИНЫ*/
