added about-us page

--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -1055,3 +1055,33 @@ footer {
 }
 
 /*============================= PHOTO__GALLERY__BLOCK ============================*/
+
+/*============================= ABOUT__US__BLOCK ============================*/
+
+.about__us__block{
+    .box(100%, 2.5%);
+    .flex__box(row, stretch);
+    margin-top: 2vw;
+}
+
+.about__us__content__box{
+    .box(50%, 2.5%);
+    .flex__box(column);
+    background-color: #FFF;
+    padding: 3vw 2.5%;
+    gap: 1vw;
+}
+
+.about__us__content__title{
+    .text(150%, 800, @color1);
+}
+
+.about__us__content{
+    .text(90%, 600, @fontColor);
+}
+
+.about__us__wrapper__img{
+    .img_box(50%);
+}
+
+/*============================= ABOUT__US__BLOCK ============================*/
